Sat Apr 29 07:10:02 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* krb5.h (krb5_set_config_files): Added new function prototype.

Fri Apr 28 01:44:51 1995  Chris Provenzano  (proven@mit.edu)

	* krb5.h (krb5_send_tgs()) : Removed krb5_cksumtype argument.

Thu Apr 27 21:36:01 1995  Chris Provenzano  (proven@mit.edu)

        * krb5.h : Added mask AP_OPTS_WIRE_MASK.

Thu Apr 27 18:27:36 1995 Keith Vetter (keithv@fusion.com)
	
	* Makefile.in: duplicate copying the profile.h file for the PC.

Thu Apr 27 17:57:36 1995 Keith Vetter (keithv@fusion.com)

	* krb5.h: krb5_mk_req somehow got INTERFACE added to it--removed it.

Tue Apr 25 21:58:23 1995  Chris Provenzano  (proven@mit.edu)

	* krb5.h (krb5_fulladdr) : Change port to be of type krb5_address.
	* krb5.h (krb5_auth_con_genaddrs()) : Added flags for new routine.
	* krb5.h (krb5_get_for_creds()) : Removed prototype.
	* krb5.h (krb5_get_cred_via_tkt()) : Added prototype.
	* krb5.h (krb5_mk_ncred(), krb5_mk_1cred(), krb5_rd_cred()):
		Updated prototype to include auth_context.

Fri Apr 21 08:58:50 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* krb5.h: krb5_princ_aref() doesn't work, and isn't used anywhere.
		Removed.  (So all of macros.h is gone.)

	* krb5.h, k5-int.h: Moved struct _krb5_context to k5-int.h

Thu Apr 20 12:15:54 1995 Keith Vetter (keithv@fusion.com)

	* krb5.h: Needs SIZEOF_INT, SIZEOF_LONG defined for the PC.

Wed Apr 29 10:00:00 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: duplicated the file copying stuff from 
           ..\gssapi\generic so that all the copying stuff can be
           found in one place.

Thu Apr 20 11:32:09 1995    <tytso@rsx-11.mit.edu>

	* krb5.h, k5-int.h: Inlined the following include files, to
		simplify the header files which actually need to be
		installed: wordsize.h, base-defs.h, hostaddr.h,
		fieldbits.h, proto.h, macros.h, error_def.h, safepriv.h,
		ccache.h, rcache.h, keytab.h, func-proto.h, k5-free.h.