@@ -1,3 +1,7 @@
+Mon May  1 17:06:51 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* krb5.h: (krb5_set_config_files): Added const to prototype
+
 Sat Apr 29 07:10:02 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>
 
 	* krb5.h (krb5_set_config_files): Added new function prototype.
